2018-10-18  Julian Gilbey  <jdg@debian.org>

        * Remove old email address (J.Gilbey@maths.cam.ac.uk will cease
        working at some point)

2016-12-15  Julian Gilbey  <jdg@debian.org>

        * Finish writing (and fixing) documentation. (version 0.2.4)

2016-10-26  Julian Gilbey  <jdg@debian.org>

        * The git log has a full changelog.  Prepare for first Debian
        release version. (0.2.3)

2015-11-13  Julian Gilbey  <jdg@debian.org>

        * Lots of improvements to template handling, configuration file
        handling and so on.  See the git log for the full details.

2015-08-26  Julian Gilbey  <jdg@debian.org>

        * First version of jigsaw software
