@@ -1,4 +1,4 @@
-AC_INIT([jigsaw-generator], [0.2.5], [jdg@debian.org])
+AC_INIT([jigsaw-generator], [0.2.6], [jdg@debian.org])
 
 AC_PROG_MKDIR_P
 AC_CONFIG_FILES([Makefile doc/Makefile])
