@@ -1,3 +1,7 @@
+2021-01-28  Julian Gilbey  <jdg@debian.org>
+
+        * Update appdirs.py to latest upstream version
+
 2018-10-18  Julian Gilbey  <jdg@debian.org>
 
         * Remove old email address (J.Gilbey@maths.cam.ac.uk will cease
